--- a/app/views/static_pages/_top_bar.html.erb
+++ b/app/views/static_pages/_top_bar.html.erb
@@ -1,25 +1,11 @@
-<nav class="navbar navbar-default navbar-static-top" role="navigation" id="top-nav-bar">
-  <div class="container-fluid">
-    <div class="btn-group btn-group-justified">
-      <div class="btn-group">
-        <a href="<%= root_path %>" class="btn btn-default navbar-btn btn-large buttons-mine"><p class="font-large">Home</p></a>
-      </div>
-      <div class="btn-group">
-        <a href="<%= new_rsvp_path %>" class="btn btn-default navbar-btn btn-large buttons-mine"><p class="font-large">RSVP</p></a>
-      </div>
-      <div class="btn-group">
-        <a href="<%= registry_path %>" class="btn btn-default navbar-btn btn-large buttons-mine"><p class="font-large">Registry</p></a>
-      </div>
-      <div class="btn-group">
-        <a href="<%= contact_path %>" class="btn btn-default navbar-btn btn-large buttons-mine"><p class="font-large">Contact</p></a>
-      </div>
-      <div class="btn-group">
-        <a href="<%= guestbooks_path %>" class="btn btn-default navbar-btn btn-large buttons-mine"><p class="font-large">Guestbook</p></a>
-      </div>
-      <div class="btn-group">
-        <a href="<%= hotels_path %>" class="btn btn-default navbar-btn btn-large buttons-mine"><p class="font-large">Hotels</p></a>
-      </div>
-    </div>
-  </div>
-</nav>
-
+<div class="test">
+  <div id="top-nav-bar">
+  <ul class="nav nav-pills row">
+    <li class="col-md-2 col-md-offset-1"><a href="<%= root_path %>" class="btn btn-default navbar-btn btn-med buttons-mine shadow-radial"><p class="font-large">Home</p></a></li>
+    <li class="col-md-2"><a href="<%= new_rsvp_path %>" class="btn btn-default navbar-btn btn-med buttons-mine curl-top-left"><p class="font-large">RSVP</p></a></li>
+    <li class="col-md-2"><a href="<%= registry_path %>" class="btn btn-default navbar-btn btn-med buttons-mine trim"><p class="font-large">Registry</p></a></li>
+    <li class="col-md-2"><a href="<%= guestbooks_path %>" class="btn btn-default navbar-btn btn-med buttons-mine glow"><p class="font-large">Guestbook</p></a></li>
+    <li class="col-md-2"><a href="<%= hotels_path %>" class="btn btn-default navbar-btn btn-med buttons-mine outline-outward"><p class="font-large">Hotels</p></a></li>
+  </ul>
+</div>
+</div>
