--- a/app/views/guestbooks/index.html.erb
+++ b/app/views/guestbooks/index.html.erb
@@ -1,20 +1,52 @@
+<div class="row-fluid">
+  <div class="col-md-10 col-md-offset-1" id="my-form">
 
-<h1 class="text-center">Guestbook</h1>
-<div align="right">
-  <p><%= link_to('Admin', manage_guestbooks_path) %></p>
+  	<div class="row" id="title-bar">
+  		<div class="col-md-12">
+				<h1 class="center-text">Guestbook</h1>
+  			<div align="right">
+					<p><%= link_to('Admin', manage_guestbooks_path) %></p>
+				</div>
+			</div>
+		</div>
+
+		<div id="grey-background" class="row">
+			<div class="col-md-5">
+				<%= image_tag("love_quote.jpg", :alt => "image", class: 'img-rounded img-responsive') %>
+			</div>
+			<div class="col-md-5 col-md-offset-1">
+				<%= render partial: 'form' %>
+			</div>
+		</div>
+
+	</div>
 </div>
 
-<%= render partial: 'form' %>
+<div class="row">
+	<div class="col-md-10 col-md-offset-1">
+		<%= paginate @guestbooks %>
 
-<%= paginate @guestbooks %>
+		<div id="user-form">
+			<% @guestbooks.each do |guestbook| %>
+		  	<div class="row guestbook-message">
+		  		<div class="col-md-1">
+			    	<div title="Report for inapropriate content"><p><%= flag_status(guestbook)%></p></div>
+			    </div>
+			    <div class="col-md-9">
+			    	<div><b><p><%= guestbook.name %></p></b></div>
+			    </div>
+			    <div class="col-md-2">
+			    	<div><i><p><%= guestbook.created_at.to_formatted_s(:short) %></p></i></div>
+			    </div>
+			    <div class="row">
+				    <div class="col-md-12">
+				    	<div><p><%= guestbook.message %></p></div>
+				    </div>
+				  </div>
+		  	</div>
+			<% end %>
+		</div>
 
-<div id="user-form">
-<% @guestbooks.each do |guestbook| %>
-  <div class="guestbook-message container-fluid">
-    <div title="Report for inapropriate content"><p><%= flag_status(guestbook)%></p></div>
-    <div><b><p><%= guestbook.name %></p></b></div>
-    <div><i><p><%= guestbook.created_at.to_formatted_s(:short) %></p></i></div>
-    <div><p><%= guestbook.message %></p></div>
-  </div>
-<% end %>
+
+</div>
 </div>
