--- a/app/views/guestbooks/manage.html.erb
+++ b/app/views/guestbooks/manage.html.erb
@@ -1,18 +1,31 @@
-<div align="center">
-<h1>Managing Guestbook</h1>
-</div>
-<div align="right">
-<%= link_to('Export', export_guestbooks_path) %>
-</div>
 
-<br/>
-<% if @flagged.count > 0 %>
-	<h3>Flagged Messages</h3>
-	<%= render 'table', :post => @flagged %>
-	<br/>
-<% end %>
 
-	<h3>All Messages</h3>
-<%= paginate @guestbooks %>
-<%= render 'table', :post => @guestbooks %>
-<br>
+<div class="row">
+	<div class="col-md-10 col-md-offset-1 white-background">
+		<h1 class="center-text body-title">Managing Guestbook</h1>
+
+		<div align="right">
+			<%= link_to('Export', export_guestbooks_path) %>
+		</div>
+
+	
+		<% if @flagged.count > 0 %>
+		<div id="my-boarder">
+			<h3 class="center-text">Flagged Messages</h3>
+			<table class="table table-bordered">
+				<%= render 'table', :post => @flagged %>
+			</table>
+		</div>
+			<br/>
+		<% end %>
+
+			<h3 class="center-text">All Messages</h3>
+		<%= paginate @guestbooks %>
+		<table class="table table-striped table-bordered">
+			<%= render 'table', :post => @guestbooks %>
+		</table>
+		<br>
+
+	</div>
+
+</div>
