--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,37 +15,34 @@
 	<body>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-		<div id="content" class="container">
-			<div id='header' class="row">
-				<div class="col-md-12">
+
+			<div id='header' class="row-fluid">
+				<div class="col-md-10 col-md-offset-1">
 					<%= image_tag("2.png", :alt => "banner", :id => 'top-image', class: 'img-responsive') %>
 				</div>
 			</div>
 
-			<div id='top-bar' class="row">
-				<div class="col-md-12">
+			<div id='top-bar' class="row-fluid">
+				<div class="col-md-10 col-md-offset-1">
 					<%= render partial: 'static_pages/top_bar' %>
-						<!-- <%= image_tag("sunflowermirror.png", :alt => "sunflower", :id => 'sunflower') %> -->
 				</div>
 			</div>
 
-			<div id="main-body" class="row">
-				<div class="col-md-12">
-					<div >
-						<% flash.each do |name, msg| -%>
-				  		<%= content_tag :div, msg, class: name %>
-						<% end -%>
-						<%= yield %>
-					</div>
+			<div class="row-fluid">
+				<div class="col-md-10 col-md-offset-1" id="main-body" >
+					<% flash.each do |name, msg| -%>
+			  		<%= content_tag :div, msg, class: name %>
+					<% end -%>
+					<%= yield %>
 				</div>
 			</div>
 
-			<div id="footer" class="row">
-				<div class="col-md-12">
+			<div id="footer" class="row-fluid">
+				<div class="col-md-10 col-md-offset-1">
 					<%= image_tag("elephants.png", :alt => "banner", :id => 'top-image', class: 'img-responsive', id: 'footer-image') %>
 				</div>
 			</div>
 
-		</div>
+
 	</body>
 </html>
