--- a/app/views/rsvps/index.html.erb
+++ b/app/views/rsvps/index.html.erb
@@ -1,29 +1,32 @@
-<h1 class="text-center body-title">Showing all RSVPs</h1>
 
-<div class="white-background">
-<table class="table table-striped table-bordered table-hover">
-  <thead>
-    <tr>
-      <th><%= link_to('Name',rsvps_path(:order_by => 'name')) %></th>
-      <th><%= link_to('Contact',rsvps_path(:order_by => 'contact')) %></th>
-      <th><%= link_to('Attending',rsvps_path(:order_by => 'attending')) %></th>
-      <th><%= link_to('Name',rsvps_path(:order_by => 'party_size')) %></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1 white-background">
 
-  <tbody>
-    <% @rsvps.each do |rsvp| %>
-      <tr>
-        <td><p><%= rsvp.name %></p></td>
-        <td><p><%= rsvp.contact %></p></td>
-        <td><p><%= rsvp.attending %></p></td>
-        <td><p><%= rsvp.party_size %></p></td>
-        <td><p><%= link_to 'Edit', edit_rsvp_path(rsvp) %></p></td>
-        <td><p><%= link_to 'Destroy', rsvp, method: :delete, data: { confirm: 'Are you sure?' } %></p></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-</div>
+    <h1 class="text-center body-title">Showing all RSVPs</h1>
+    <table class="table table-striped table-bordered">
+      <thead>
+        <tr>
+          <th><%= direction_arrow('name') %><%= link_to('Name',rsvps_path(:sort_by => 'name', :order_by => get_order('name'))) %></th>
+          <th><%= direction_arrow('contact') %><%= link_to('Contact',rsvps_path(:sort_by => 'contact', :order_by => get_order('contact'))) %></th>
+          <th><%= direction_arrow('attending') %><%= link_to('Attending',rsvps_path(:sort_by => 'attending', :order_by => get_order('attending'))) %></th>
+          <th><%= direction_arrow('party_size') %><%= link_to('Party size',rsvps_path(:sort_by => 'party_size', :order_by => get_order('party_size'))) %></th>
+          <th></th>
+          <th></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @rsvps.each do |rsvp| %>
+          <tr>
+            <td><p><%= rsvp.name %></p></td>
+            <td><p><%= rsvp.contact %></p></td>
+            <td><p><%= rsvp.attending %></p></td>
+            <td><p><%= rsvp.party_size %></p></td>
+            <td><p><%= link_to 'Edit', edit_rsvp_path(rsvp) %></p></td>
+            <td><p><%= link_to 'Destroy', rsvp, method: :delete, data: { confirm: 'Are you sure?' } %></p></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  </div>
