fixed admin link on rsvp to use params

--- a/app/views/rsvps/new.html.erb
+++ b/app/views/rsvps/new.html.erb
@@ -4,7 +4,7 @@
 		<h1 class="center-text">RSVP</h1>
 
 		<div align="right">
-		  <p><%= link_to('Admin', rsvps_path) %></p>
+		  <p><%= link_to('Admin', rsvps_path(order_by: :asc, sort_by: :name)) %></p>
 		</div>
 
 		<%= render 'form' %>
