--- a/app/views/static_pages/registry.html.erb
+++ b/app/views/static_pages/registry.html.erb
@@ -2,8 +2,8 @@
   <div class="col-md-6 col-md-offset-3" id="my-form">
 			<h1 class="text-center ">Registry</h1>
 
-			<p>
-			<b align="center">We have registered at the following places and will be having a money dance.</b>
+			<p class="center-text">
+			<b>We have registered at the following places and will be having a money dance.</b>
 			</p>
 			</br>
 			<a href="http://www.amazon.com/gp/registry/wedding/3QOIBI1PRZIVD" target="_blank"><%= image_tag("amazon.png", :alt => "amazon", class: 'img-responsive my-images') %></a>
