--- a/app/views/rsvps/new.html.erb
+++ b/app/views/rsvps/new.html.erb
@@ -7,6 +7,12 @@
 		  <p><%= link_to('Admin', rsvps_path(order_by: :asc, sort_by: :name)) %></p>
 		</div>
 
+		<div class="center-text">
+			<% flash.each do |name, msg| -%>
+	  		<%= content_tag :div, msg, class: name, id: 'top-notice' %>
+			<% end -%>
+		</div>
+
 		<%= render 'form' %>
 
 	</div>
