--- a/app/views/rsvps/new.html.erb
+++ b/app/views/rsvps/new.html.erb
@@ -14,6 +14,8 @@
 		</div>
 
 		<%= render 'form' %>
+		<p>If you made an error when filling out the RSVP form, please contact Zack, Katie, Brandon, or Colleen.</p>
+	</div>
 
 	</div>
 </div>
