change contact to email address

--- a/app/views/rsvps/new.html.erb
+++ b/app/views/rsvps/new.html.erb
@@ -14,7 +14,7 @@
 		</div>
 
 		<%= render 'form' %>
-		<p>If you made an error when filling out the RSVP form, please contact Zack, Katie, Brandon, or Colleen.</p>
+		<p>If you made an error when filling out the RSVP form, please email zkForever.am@gmail.com</p>
 	</div>
 
 	</div>
