--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -16,7 +16,7 @@
 		</br></br>
 		<p class="font-medium">Please RSVP and sign the digital guestbook!</p>
 		</br></br>
-		<p class="font-medium">If you made an error when filling out the RSVP form, please contact Zack, Katie, Brandon, or Colleen.</p>
+		<p class="font-medium">If you made an error when filling out the RSVP form, please email zkForever.am@gmail.com</p>
 		</br></br>
 	</div>
 
