--- a/app/views/guestbooks/manage.html.erb
+++ b/app/views/guestbooks/manage.html.erb
@@ -4,11 +4,6 @@
 	<div class="col-md-10 col-md-offset-1 white-background">
 		<h1 class="center-text body-title">Managing Guestbook</h1>
 
-		<div align="right">
-			<%= link_to('Export', export_guestbooks_path) %>
-		</div>
-
-	
 		<% if @flagged.count > 0 %>
 		<div id="my-boarder">
 			<h3 class="center-text">Flagged Messages</h3>
@@ -21,6 +16,9 @@
 
 			<h3 class="center-text">All Messages</h3>
 		<%= paginate @guestbooks %>
+			<div align="right">
+				<%= link_to('Export All', export_guestbooks_path) %>
+			</div>
 		<table class="table table-striped table-bordered">
 			<%= render 'table', :post => @guestbooks %>
 		</table>
