--- a/app/views/rsvps/index.html.erb
+++ b/app/views/rsvps/index.html.erb
@@ -3,6 +3,11 @@
   <div class="col-md-10 col-md-offset-1 white-background">
 
     <h1 class="text-center body-title">Showing all RSVPs</h1>
+
+    <% flash.each do |name, msg| -%>
+      <%= content_tag :div, msg, class: "#{name} center-text" %>
+    <% end -%>
+    
     <table class="table table-striped table-bordered">
       <thead>
         <tr>
