--- a/app/views/contact/contact_email.html.erb
+++ b/app/views/contact/contact_email.html.erb
@@ -8,6 +8,6 @@
     <p>
       <%= @message %>
     </p>
-    <p>Please email me back at: <%= @email %></p>
+    <p>Please contact me back at: <%= @contact %></p>
   </body>
 </html>
