--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,9 +1,12 @@
-<div class="container-fluid">
-<div class="body-title">
-  <h1 class="text-center ">Contact</h1>
-</div>
-<div class="row">
-  <div class="my-form">
+
+  
+<div class="row-fluid">
+  <div class="col-md-6 col-md-offset-3" id="my-form">
+    <h1 class="center-text">Contact</h1>
+
+    You questions will not be sent directly to anyone in the wedding party. They will be answered by someone that is in contact with the wedding party.
+      </br>
+      </br>
 
     <%= form_tag("/send_mail", method: "post", role: 'form') do%>
 
@@ -13,18 +16,18 @@
       </div>
 
       <div class="field control-label form-group" >
-        <p><%= label_tag :email %></p>
-        <p><%= text_field_tag :email, nil, required: '', class: 'form-control' %></p>
+        <p><%= label_tag :contact %></p>
+        <p><%= text_field_tag :contact, nil, required: '', class: 'form-control' %></p>
       </div>
         
       <div class="field control-label form-group">
         <p><%= label_tag :message %></p>
-        <p><%= text_area_tag :message, nil, class: 'form-control', rows: '8' %></p>
+        <p><%= text_area_tag :message, nil, required: '', class: 'form-control', rows: '8' %></p>
       </div>
 
         </br>
 
-      <div class="actions form-group">
+      <div class="actions form-groupn center-text">
         <p><%= submit_tag 'Send Message', class: "btn btn-default" %></p>
       </div>
       
