--- a/app/views/static_pages/hotels.html.erb
+++ b/app/views/static_pages/hotels.html.erb
@@ -11,7 +11,7 @@
 
 </div>
 
-
+<div id="main-hotel-list">
 	<% @hotels.each_with_index do |hotel,index| %>
 
 		<div class="row hotel-list">
@@ -64,6 +64,8 @@
 
 		</div>
 	<% end %>
+
 	
 
 
+</div>
