--- a/app/views/rsvps/_form.html.erb
+++ b/app/views/rsvps/_form.html.erb
@@ -13,6 +13,10 @@
 
 <%= form_for(@rsvp, html: {role: 'form' }) do |f| %>
 
+  <%= hidden_field_tag 'sort_by', params[:sort_by] %>
+  <%= hidden_field_tag 'order_by', params[:order_by] %>
+  <%= hidden_field_tag 'show', params[:show] %>
+
   <div class="field control-label form-group center-text" >
     <p><%= f.label :name %>
     <small>Family or Individual name</small>
