--- a/app/assets/stylesheets/my_styles.css
+++ b/app/assets/stylesheets/my_styles.css
@@ -14,6 +14,15 @@
 	max-width: 480px;
 }
 
+tbody {
+	overflow:scroll;
+}
+div.width-limiter {
+	max-width: 1500px;
+	margin-right: auto;
+	margin-left: auto;
+}
+
 #main-hotel-list {
 	padding-bottom: 40px;
 }
