--- a/app/views/rsvps/_rsvp_list.html.erb
+++ b/app/views/rsvps/_rsvp_list.html.erb
@@ -22,13 +22,13 @@
     <table class="table table-striped table-bordered" id="rsvp-table">
       <thead>
         <tr>
-          <th></th>
-          <th><%= direction_arrow('name') %><a class="sort_col" href="#">Name</a></th>
-          <th><%= direction_arrow('contact') %><a class="sort_col" href="#">Contact</a></th>
-          <th><%= direction_arrow('attending') %><a class="sort_col" href="#">Attending</a></th>
-          <th><%= direction_arrow('party_size') %><a class="sort_col" href="#">Party size</a></th>
-          <th></th>
-          <th></th>
+          <th width="22"></th>
+          <th width="300"><%= direction_arrow('name') %><a class="sort_col" href="#">Name</a></th>
+          <th width="400"><%= direction_arrow('contact') %><a class="sort_col" href="#">Contact</a></th>
+          <th width="80"><%= direction_arrow('attending') %><a class="sort_col" href="#">Attending</a></th>
+          <th width="100"><%= direction_arrow('party_size') %><a class="sort_col" href="#">Party size</a></th>
+          <th width="20"></th>
+          <th width="20"></th>
         </tr>
       </thead>
 
