fix bottom image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
 				</div>
 			</div>
 
-			<div id="footer" class="row width-limiter">
+			<div id="footer" class="row">
 				<div class="col-md-10 col-md-offset-1">
 					<%= image_tag("elephants.png", :alt => "banner", :id => 'top-image', class: 'img-responsive', id: 'footer-image') %>
 				</div>
