--- a/app/views/static_pages/_image_carousel.html.erb
+++ b/app/views/static_pages/_image_carousel.html.erb
@@ -1,15 +1,19 @@
 <!--  Carousel - consult the Twitter Bootstrap docs at 
       http://twitter.github.com/bootstrap/javascript.html#carousel -->
-<div id="this-carousel-id" class="carousel slide"><!-- class of slide for animation -->
+<div id="this-carousel-id" class="carousel slide" data-ride="carousel"><!-- class of slide for animation -->
   <ol class="carousel-indicators">
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
     <li data-target="#carousel-example-generic" data-slide-to="3"></li>
     <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
   </ol>
   <div class="carousel-inner">
     <div class="item active"><!-- class of active since it's the first item -->
+      <img src="assets/front_slider/0.png" alt="" />
+    </div>
+    <div class="item">
       <img src="assets/front_slider/3.png" alt="" />
     </div>
     <div class="item">
@@ -27,6 +31,10 @@
   </div><!-- /.carousel-inner -->
   <!--  Next and Previous controls below
         href values must reference the id for this carousel -->
-    <a class="carousel-control left" href="#this-carousel-id" data-slide="prev">&lsaquo;</a>
-    <a class="carousel-control right" href="#this-carousel-id" data-slide="next">&rsaquo;</a>
+    <a class="carousel-control left" href="#this-carousel-id" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+    </a>
+    <a class="carousel-control right" href="#this-carousel-id" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+    </a>
 </div><!-- /.carousel -->
