--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing Blogs</h1>
 <%= paginate @blogs %>
-<%= link_to('Admin', manage_blogs_path) %>
+<%= link_to('Admin', manage_blogs_path, class: 'black') %>
 <table>
   <thead>
     <tr>
