--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 		<div id="width-limiter2">
 			<div id='header' class="row width-limiter">
 				<div class="col-md-8 col-md-offset-2">
-					<%= image_tag("2.png", :alt => "banner", :id => 'top-image', class: 'img-responsive') %>
+					<%= image_tag("top_image.png", :alt => "banner", :id => 'top-image', class: 'img-responsive') %>
 				</div>
 			</div>
 
@@ -42,7 +42,7 @@
 
 			<div id="footer" class="row">
 				<div class="col-md-8 col-md-offset-2">
-					<%= image_tag("elephants.png", :alt => "banner", :id => 'top-image', class: 'img-responsive', id: 'footer-image') %>
+					<%= image_tag("elephants.png", :alt => "banner", class: 'img-responsive', id: 'footer-image') %>
 				</div>
 			</div>
 		</div>
