--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,3 +1,7 @@
+// Place all the styles related to the StaticPages controller here.
+// They will automatically be included in application.css.
+// You can use Sass (SCSS) here: http://sass-lang.com/
+
 .hotel-list {
 	padding: 10px 10px;
 	margin: 20px 20px;
@@ -12,31 +16,18 @@
 
 .warning {
 	color: red;
-}
-
-#top-nav-bar {
-	margin-bottom: 20px;
-	border: 1px solid;
-  border-radius: 10px;
-  background-image: asset-url('ribbon3.png');
-
-}
-
-a.buttons-mine{
-	background-color: transparent !important;
-	border: none;
-}
-
-a.buttons-mine:hover{
-	background-color: transparent !important;
-}
-
-
-#rsvp_party_size {
 	margin-left: auto;
   margin-right: auto;
 }
 
 #hotel-welcome {
 	padding: 20px 30px;
+}
+
+div#my-home-form {
+	background-color: white;
+	padding: 20px 20px;
+  border-radius: 10px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
