--- a/app/views/static_pages/_top_bar.html.erb
+++ b/app/views/static_pages/_top_bar.html.erb
@@ -1,11 +1,11 @@
 
   <div id="top-nav-bar">
   <ul class="nav nav-pills row">
-    <li class="col-md-2 col-md-offset-1"><a href="<%= root_path %>" class="no-hover btn btn-default navbar-btn btn-med buttons-mine shadow-radial"><p class="font-large">Home</p></a></li>
-    <li class="col-md-2"><a href="<%= new_rsvp_path %>" class="no-hover btn btn-default navbar-btn btn-med buttons-mine shadow-radial"><p class="font-large">RSVP</p></a></li>
-    <!-- <li class="col-md-2"><a href="<%= contact_path %>" class="no-hover btn btn-default navbar-btn btn-med buttons-mine shadow-radial"><p class="font-large">Contact</p></a></li> -->
-    <li class="col-md-2"><a href="<%= registry_path %>" class="no-hover btn btn-default navbar-btn btn-med buttons-mine shadow-radial"><p class="font-large">Registry</p></a></li>
-    <li class="col-md-2"><a href="<%= guestbooks_path %>" class="no-hover btn btn-default navbar-btn btn-med buttons-mine shadow-radial"><p class="font-large">Guestbook</p></a></li>
-    <li class="col-md-2"><a href="<%= hotels_path %>" class="no-hover btn btn-default navbar-btn btn-med buttons-mine shadow-radial"><p class="font-large ">Hotels</p></a></li>
+    <li class="col-md-2 col-md-offset-1"><a href="<%= root_path %>" class="btn navbar-btn btn-med buttons-mine shadow-radial"><p class="font-large">Home</p></a></li>
+    <li class="col-md-2"><a href="<%= new_rsvp_path %>" class="btn navbar-btn btn-med buttons-mine shadow-radial"><p class="font-large">RSVP</p></a></li>
+    <!-- <li class="col-md-2"><a href="<%= contact_path %>" class="btn navbar-btn btn-med buttons-mine shadow-radial"><p class="font-large">Contact</p></a></li> -->
+    <li class="col-md-2"><a href="<%= registry_path %>" class="btn navbar-btn btn-med buttons-mine shadow-radial"><p class="font-large">Registry</p></a></li>
+    <li class="col-md-2"><a href="<%= guestbooks_path %>" class="btn navbar-btn btn-med buttons-mine shadow-radial"><p class="font-large">Guestbook</p></a></li>
+    <li class="col-md-2"><a href="<%= hotels_path %>" class="btn navbar-btn btn-med buttons-mine shadow-radial"><p class="font-large ">Hotels</p></a></li>
   </ul>
 </div>
