--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -38,10 +38,6 @@ body {
   min-height: 650px;
 }
 
-.black {
-	color: black;
-}
-
 .notice {
 	font-size: 1.3em;
 	border: 1px solid;
@@ -116,6 +112,10 @@ nav.pagination{
 	font-size: 1.2em;
 }
 
+.padding-5 {
+	padding: 5px 0px 5px 0px;
+}
+
 .page.current {
 	color:grey;
 }
@@ -150,6 +150,10 @@ li a.buttons-mine:hover{
   margin-bottom: 20px;
 }
 
+.no-background {
+	background-color: transparent;
+}
+
 p {
 	font-family: "goudos";
 }
@@ -182,4 +186,12 @@ a.map-link:visited {color: blue;}
 a.map-link:hover {color: black;}
 a.map-link:active {color: blue;}
 
+a:link {color: black;}
+a:visited {color: black;}
+a:hover {color: black; text-decoration: none;}
+a:active {color: black;}
+
+.remove-padding {
+	padding: 0px 0px 0px 0px;
+}
 
