--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,29 +21,27 @@
 
 	<body>
 
-		<div id="width-limiter2">
-			<div id='header' class="row width-limiter">
-				<div class="col-md-8 col-md-offset-2">
-					<%= image_tag("top_image.png", :alt => "banner", :id => 'top-image', class: 'img-responsive') %>
-				</div>
+		<div id='header' class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<%= image_tag("top_image.png", :alt => "banner", :id => 'top-image', class: 'img-responsive') %>
 			</div>
+		</div>
 
-			<div id='top-bar' class="row width-limiter">
-				<div class="col-md-8 col-md-offset-2">
-					<%= render partial: 'static_pages/top_bar' %>
-				</div>
+		<div id='top-bar' class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<%= render partial: 'static_pages/top_bar' %>
 			</div>
+		</div>
 
-			<div class="row width-limiter">
-				<div class="col-md-8 col-md-offset-2" id="main-body" >
-					<%= yield %>
-				</div>
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2" id="main-body" >
+				<%= yield %>
 			</div>
+		</div>
 
-			<div id="footer" class="row">
-				<div class="col-md-8 col-md-offset-2">
-					<%= image_tag("elephants.png", :alt => "banner", class: 'img-responsive', id: 'footer-image') %>
-				</div>
+		<div id="footer" class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<%= image_tag("elephants.png", :alt => "banner", class: 'img-responsive', id: 'footer-image') %>
 			</div>
 		</div>
 
