--- a/app/views/guestbooks/index.html.erb
+++ b/app/views/guestbooks/index.html.erb
@@ -31,7 +31,7 @@
 
 		<div id="user-form">
 			<% @guestbooks.each do |guestbook| %>
-		  	<div class="row guestbook-message">
+		  	<div class="row list-item">
 		  		<div class="col-md-1">
 			    	<div title="Report for inapropriate content"><p><%= flag_status(guestbook)%></p></div>
 			    </div>
