--- a/app/views/static_pages/_image_carousel.html.erb
+++ b/app/views/static_pages/_image_carousel.html.erb
@@ -2,12 +2,12 @@
       http://twitter.github.com/bootstrap/javascript.html#carousel -->
 <div id="this-carousel-id" class="carousel slide" data-ride="carousel"><!-- class of slide for animation -->
   <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+    <li data-slide-to="0" class="active"></li>
+    <li data-slide-to="1"></li>
+    <li data-slide-to="2"></li>
+    <li data-slide-to="3"></li>
+    <li data-slide-to="4"></li>
+    <li data-slide-to="4"></li>
   </ol>
   <div class="carousel-inner">
     <div class="item active"><!-- class of active since it's the first item -->
