--- a/app/views/static_pages/hotels.html.erb
+++ b/app/views/static_pages/hotels.html.erb
@@ -14,7 +14,7 @@
 <div id="main-hotel-list">
 	<% @hotels.each_with_index do |hotel,index| %>
 
-		<div class="row hotel-list">
+		<div class="row list-item">
 			<div class="col-md-2" >
 				<%= image_tag("hotel_images/#{hotel['logo']}", class: 'hotel-images') %>
 			</div>
