--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,7 +17,16 @@
 	border: 1px solid;
   border-radius: 10px;
   background-image: url('ribbon.png');
+  
+}
 
+i.fa {
+	padding-left: 10px;
+	padding-top: 3px;
+}
+
+ul {
+	list-style-type: none;
 }
 
 #top-image {
