--- a/app/views/static_pages/_top_bar.html.erb
+++ b/app/views/static_pages/_top_bar.html.erb
@@ -1,41 +1,92 @@
 <div id="top-nav-bar">
-  <div class="btn-group btn-group-justified padding-5"> 
 
-		<div class="btn-group">
-			<button type="button" class="btn no-background remove-padding shadow-radial">
-				<a href="<%= root_path %>" class="black-href"><p class="font-large">Home</p></a>
-			</button> 
-		</div>
+  <nav class="fixed-top hidden-sm hidden-md hidden-lg">
+      <div class="nav-menu slideDown w-divider">
+        <ul>
 
-		<div class="btn-group">
-			<button type="button" class="btn no-background remove-padding shadow-radial">
-				<a href="<%= new_rsvp_path %>" class="black-href"><p class="font-large">RSVP</p></a>
-			</button> 
-		</div>
+          <li>
+            <button type="button" class="btn no-background remove-padding shadow-radial">
+              <a href="<%= root_path %>" class="black-href"><p class="font-large">Home</p></a>
+            </button> 
+          </li>
 
-		<div class="btn-group">
-			<button type="button" class="btn no-background remove-padding shadow-radial">
-				<a href="<%= registry_path %>" class="black-href"><p class="font-large">Registry</p></a>
-			</button> 
-		</div>
+          <li>
+            <button type="button" class="btn no-background remove-padding shadow-radial">
+              <a href="<%= new_rsvp_path %>" class="black-href"><p class="font-large">RSVP</p></a>
+            </button> 
+          </li>
 
-		<!-- <div class="btn-group">
-			<button type="button" class="btn no-background remove-padding shadow-radial">
-				<a href="<%= contact_path %>" class="black-href"><p class="font-large">Contact</p></a>
-			</button> 
-		</div> -->
+          <li>
+            <button type="button" class="btn no-background remove-padding shadow-radial">
+              <a href="<%= registry_path %>" class="black-href"><p class="font-large">Registry</p></a>
+            </button> 
+          </li>
 
-		<div class="btn-group">
-			<button type="button" class="btn no-background remove-padding shadow-radial">
-				<a href="<%= guestbooks_path %>" class="black-href"><p class="font-large">Guestbook</p></a>
-			</button> 
-		</div>
+          <!-- <li>
+            <button type="button" class="btn no-background remove-padding shadow-radial">
+              <a href="<%= contact_path %>" class="black-href"><p class="font-large">Contact</p></a>
+            </button> 
+          </li> -->
 
-		<div class="btn-group">
-			<button type="button" class="btn no-background remove-padding shadow-radial">
-				<a href="<%= hotels_path %>" class="black-href"><p class="font-large">Hotels</p></a>
-			</button> 
-		</div>
+          <li>
+            <button type="button" class="btn no-background remove-padding shadow-radial">
+              <a href="<%= guestbooks_path %>" class="black-href"><p class="font-large">Guestbook</p></a>
+            </button> 
+          </li>
 
-	</div>
+          <li>
+            <button type="button" class="btn no-background remove-padding shadow-radial">
+              <a href="<%= hotels_path %>" class="black-href"><p class="font-large">Hotels</p></a>
+            </button> 
+          </li>
+
+        </ul>
+      </div>   
+      <a class="s-button s-collapse-trigger" href="#"><i class="fa fa-plus-square fa-2x"></i></a>
+  </nav>
+
+    <!-- *************************** -->
+    <!-- Show this on larger screens -->
+    <!-- *************************** -->
+
+  <nav class="hidden-xs">
+    <div class="btn-group btn-group-justified padding-5"> 
+
+      <div class="btn-group">
+        <button type="button" class="btn no-background remove-padding shadow-radial">
+          <a href="<%= root_path %>" class="black-href"><p class="font-large">Home</p></a>
+        </button> 
+      </div>
+
+      <div class="btn-group">
+        <button type="button" class="btn no-background remove-padding shadow-radial">
+          <a href="<%= new_rsvp_path %>" class="black-href"><p class="font-large">RSVP</p></a>
+        </button> 
+      </div>
+
+      <div class="btn-group">
+        <button type="button" class="btn no-background remove-padding shadow-radial">
+          <a href="<%= registry_path %>" class="black-href"><p class="font-large">Registry</p></a>
+        </button> 
+      </div>
+
+      <!-- <div class="btn-group">
+        <button type="button" class="btn no-background remove-padding shadow-radial">
+          <a href="<%= contact_path %>" class="black-href"><p class="font-large">Contact</p></a>
+        </button> 
+      </div> -->
+
+      <div class="btn-group">
+        <button type="button" class="btn no-background remove-padding shadow-radial">
+          <a href="<%= guestbooks_path %>" class="black-href"><p class="font-large">Guestbook</p></a>
+        </button> 
+      </div>
+
+      <div class="btn-group">
+        <button type="button" class="btn no-background remove-padding shadow-radial">
+          <a href="<%= hotels_path %>" class="black-href"><p class="font-large">Hotels</p></a>
+        </button> 
+      </div>
+    </div>
+  </nav>
 </div>
