--- a/app/views/static_pages/_top_bar.html.erb
+++ b/app/views/static_pages/_top_bar.html.erb
@@ -42,7 +42,7 @@
 
         </ul>
       </div>   
-      <a class="s-button s-collapse-trigger" href="#"><i class="fa fa-plus-square fa-2x"></i></a>
+      <a class="s-button s-collapse-trigger" href="#"><i class="fa fa-chevron-down fa-2x"></i></a>
   </nav>
 
     <!-- *************************** -->
